// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`SelectInput snapshots renders 4 items with default state 1`] = `
"◆ Select
│ ▸ ○ TypeScript
│   ○ JavaScript
│   ○ Python
│   ○ Rust"
`;

exports[`SelectInput snapshots renders with cursor on default value 1`] = `
"◆ Select
│   ○ TypeScript
│ ▸ ○ JavaScript
│   ○ Python"
`;

exports[`SelectInput snapshots renders with empty items 1`] = `"◆ Select"`;

exports[`SelectInput snapshots renders disabled state 1`] = `
"◆ Select
│   ○ TypeScript
│   ○ JavaScript"
`;

exports[`SelectInput snapshots renders with groups 1`] = `
"◆ Select
│  Languages
│ ▸ ○ TypeScript
│   ○ Python
│   ────────────────────
│  Frameworks
│   ○ React"
`;

exports[`SelectInput snapshots renders required and invalid state 1`] = `
"◆ Select *
│   Please select an option
│ ▸ ○ TypeScript
│   ○ JavaScript"
`;
